// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/float-button/demo/back-top.md correctly 1`] = `
<div
  style="height: 500vh; padding: 10px;"
>
  <div>
    Scroll to bottom
  </div>
  <div>
    Scroll to bottom
  </div>
  <div>
    Scroll to bottom
  </div>
  <div>
    Scroll to bottom
  </div>
  <div>
    Scroll to bottom
  </div>
  <div>
    Scroll to bottom
  </div>
  <div>
    Scroll to bottom
  </div>
  <div
    class="ant-float-btn ant-float-btn-default ant-float-btn-square"
    shape="square"
  />
</div>
`;

exports[`renders ./components/float-button/demo/basic.md correctly 1`] = `
<button
  class="ant-float-btn ant-float-btn-default ant-float-btn-circle"
  type="button"
>
  <div
    class="ant-float-btn-body"
  >
    <div
      class="ant-float-btn-content"
    >
      <div
        class="ant-float-btn-icon ant-float-btn-default-icon"
      >
        <span
          aria-label="file-text"
          class="anticon anticon-file-text"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="file-text"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</button>
`;

exports[`renders ./components/float-button/demo/customize-shape.md correctly 1`] = `
Array [
  <p>
    点击切换形状
  </p>,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="circle"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        圆形
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="square"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        方形
      </span>
    </label>
  </div>,
  <button
    class="ant-float-btn ant-float-btn-primary ant-float-btn-circle"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-primary-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>,
]
`;

exports[`renders ./components/float-button/demo/customize-type.md correctly 1`] = `
Array [
  <button
    class="ant-float-btn ant-float-btn-primary ant-float-btn-circle"
    style="right: 24px;"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-primary-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>,
  <button
    class="ant-float-btn ant-float-btn-default ant-float-btn-circle"
    style="right: 80px;"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-default-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>,
]
`;

exports[`renders ./components/float-button/demo/group.md correctly 1`] = `
<div
  class="ant-float-btn-group ant-float-btn-group-circle ant-float-btn-group-circle-shadow"
>
  <button
    class="ant-float-btn ant-float-btn-default ant-float-btn-circle"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-default-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>
  <button
    class="ant-float-btn ant-float-btn-default ant-float-btn-circle"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-default-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>
  <div
    class="ant-float-btn ant-float-btn-default ant-float-btn-circle"
  />
</div>
`;

exports[`renders ./components/float-button/demo/group-customize.md correctly 1`] = `
<div
  class="ant-float-btn-group ant-float-btn-group-square ant-float-btn-group-square-shadow"
>
  <button
    class="ant-float-btn ant-float-btn-default ant-float-btn-square"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-default-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>
  <button
    class="ant-float-btn ant-float-btn-default ant-float-btn-square"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-default-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>
  <button
    class="ant-float-btn ant-float-btn-default ant-float-btn-square"
    type="button"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-content"
      >
        <div
          class="ant-float-btn-icon ant-float-btn-default-icon"
        >
          <span
            aria-label="file-text"
            class="anticon anticon-file-text"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="file-text"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`renders ./components/float-button/demo/group-menu.md correctly 1`] = `
<div
  class="ant-float-btn-group ant-float-btn-group-square"
>
  <div
    class="ant-float-btn ant-float-btn-tigger ant-float-btn-default ant-float-btn-square ant-float-btn-square-tigger"
  >
    <div
      class="ant-float-btn-body"
    >
      <div
        class="ant-float-btn-icon ant-float-btn-default-icon"
      >
        <span
          aria-label="file-text"
          class="anticon anticon-file-text"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="file-text"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/float-button/demo/tooltip.md correctly 1`] = `
<button
  class="ant-float-btn ant-float-btn-default ant-float-btn-circle"
  type="button"
>
  <div
    class="ant-float-btn-body"
  >
    <div
      class="ant-float-btn-content"
    >
      <div
        class="ant-float-btn-icon ant-float-btn-default-icon"
      >
        <span
          aria-label="file-text"
          class="anticon anticon-file-text"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="file-text"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494zM504 618H320c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM312 490v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H320c-4.4 0-8 3.6-8 8z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</button>
`;
